# fluent-blended-app

./: .gitignore  .gitmodules  Cargo.toml  DEPLOYMENT_COMPLETE.md  FRONTEND_REDESIGN_COMPLETE.md  README.md  build-and-deploy.bat  build-and-deploy.sh  build.bat  build.sh  check_contracts.js  cleanup.bat  cleanup.sh  debug_info.md  deploy.js  deployment-instructions.md  deployment-result.json  fix-checksums.js  launch-frontend.bat  launch-frontend.sh  package-lock.json  package.json  real-world-deploy.js  rust.js  simple-update.js  solidity.js  test.js  test_contract_interaction.js  update-frontend.js  vercel.json  verify-deployment.js  verify_contract.js
deploy-temp/: deploy.js
deployment/: README.md  prbMathBlended.sol
deployment/frontend/js/: app.js
deployment/scripts/: deploy-blended-app.sh  deploy-interactive.bat  deploy.js  package-lock.json  package.json  real-world-deploy.js  temp-deploy.js
deployment/scripts/temp-deploy/: package.json
fluent-contract/: Cargo.toml
fluent-contract/src/: lib.rs
forge-solidity/: constructor-args.txt
forge-solidity/src/: FluentSdkRustTypesTest.sol
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend-old/: index.html
frontend-old/css/: styles.css
frontend-old/js/: app.js
frontend/css/: styles.css
frontend/js/: app.js
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  MathFunctions.jsx  WalletConnection.jsx
frontend/src/styles/: App.css
javascript/: package-lock.json  package.json  rust.js  solidity.js
old frontend/: index.html
old frontend/css/: styles.css
old frontend/js/: app.js
old_frontend_2/: DEPLOYMENT_INSTRUCTIONS.md
old_frontend_2/scripts/: fix-deployment.js
old_frontend_2/src/: App.css  App.jsx  index.css
old_frontend_2/src/components/: AboutSection.jsx  FunctionCard.jsx  GraphVisualization.jsx  MathFunctions.jsx
old_frontend_2/src/styles/: App.css
prb-math-blended/: deploy.js  deployment-summary.json
prb-math-blended/frontend/: index.html
prb-math-blended/frontend/css/: styles.css
prb-math-blended/frontend/js/: app.js
prb-math-blended/rust/: Cargo.toml  Makefile
prb-math-blended/rust/src/: lib.rs
prb-math-react-frontend/: package-lock.json  package.json
prb-math-react-frontend/src/: App.css  App.jsx
prb-math-react-frontend/src/components/: AboutSection.jsx  FunctionCard.jsx  GraphVisualization.jsx  Header.jsx  WalletConnection.jsx
prb-math-react-frontend/src/styles/: App.css
prbMathBlended/: package.json
rust/: Cargo.toml
rust/src/: lib.rs
solidity/: constructor-args.txt  prbMathBlended.sol
src/: lib.rs
temp-deploy/: package-lock.json
tests/: one-line-test.js  test-fluent-connection.js
(+3 files in other folders)
