[package]
edition = "2021"
name = "rustsimplesc"
version = "0.1.0"

[lib]
crate-type = ["cdylib"] # This ensures we output a .wasm file
path = "src/lib.rs"

[dependencies]
alloc = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.1.0-dev", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = [
  "fluentbase-sdk/std"
]

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
strip = true
codegen-units = 1 