[package]
name = "prb-math-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { version = "0.7.4", default-features = false }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", default-features = false }
libm = { version = "0.2", default-features = false }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[features]
default = []
std = [
  "fluentbase-sdk/std",
]
